--- a/PikminTable.html
+++ b/PikminTable.html
@@ -5,7 +5,7 @@
 <title> Pikmin 3 Boss Information</title>
 <style type="text/css">
   body {
-			font-family:Constantia, 'Lucida Bright', 'DejaVu Serif', Georgia, 'serif';
+			font-family:serif;
 			background-color: #aee8fc;
 		}
 
