--- a/table.html
+++ b/table.html
@@ -61,7 +61,7 @@
         <th colspan="1"><h3>How to Defeat</h3></th>
       </tr>
   <tr>
-  <th rowspan="2"><img src= "Images/Mawdad.jpg" alt= "Armored Mawdad"><h2>Armored Mawdad</h2></th></tr>
+  <th rowspan="2"><img src= "Images/Mawdad.JPG" alt= "Armored Mawdad"><h2>Armored Mawdad</h2></th></tr>
     <th rowspan="1">Tuberclipeum rex (Mawdad Family)
   <th rowspan="1">The Armored Mawdad lives in a hollowed treetrunk in the Garden of Hope.</th>
   <th rowspan="1">The Mawdad is a large, centipede-like creature with many tiny legs paired with Crytal-like mandibles. The armor of the Mawdad is actually its exoskeleton and it too is make of a tough crytal-like material.</th>
