--- a/table.html
+++ b/table.html
@@ -5,7 +5,7 @@
 <title> Pikmin 3 Boss Information</title>
 <style type="text/css">
   body {
-			font-family:Constantia, 'Lucida Bright', 'DejaVu Serif', Georgia, 'serif';
+			font-family:serif;
 			background-color: #aee8fc;
 		}
 
@@ -61,7 +61,7 @@
         <th colspan="1"><h3>How to Defeat</h3></th>
       </tr>
   <tr>
-  <th rowspan="2"><img src= "../Coding/Images/Mawdad.jpg" alt= "Armored Mawdad"><h2>Armored Mawdad</h2></th></tr>
+  <th rowspan="2"><img src= "..table/Coding/Images/Mawdad.jpg" alt= "Armored Mawdad"><h2>Armored Mawdad</h2></th></tr>
     <th rowspan="1">Tuberclipeum rex (Mawdad Family)
   <th rowspan="1">The Armored Mawdad lives in a hollowed treetrunk in the Garden of Hope.</th>
   <th rowspan="1">The Mawdad is a large, centipede-like creature with many tiny legs paired with Crytal-like mandibles. The armor of the Mawdad is actually its exoskeleton and it too is make of a tough crytal-like material.</th>
