--- a/table.html
+++ b/table.html
@@ -61,7 +61,7 @@
         <th colspan="1"><h3>How to Defeat</h3></th>
       </tr>
   <tr>
-  <th rowspan="2"><img src= "..table/Coding/Images/Mawdad.jpg" alt= "Armored Mawdad"><h2>Armored Mawdad</h2></th></tr>
+  <th rowspan="2"><img src= "/Coding/Images/Mawdad.jpg" alt= "Armored Mawdad"><h2>Armored Mawdad</h2></th></tr>
     <th rowspan="1">Tuberclipeum rex (Mawdad Family)
   <th rowspan="1">The Armored Mawdad lives in a hollowed treetrunk in the Garden of Hope.</th>
   <th rowspan="1">The Mawdad is a large, centipede-like creature with many tiny legs paired with Crytal-like mandibles. The armor of the Mawdad is actually its exoskeleton and it too is make of a tough crytal-like material.</th>
@@ -70,7 +70,7 @@
 
 
   <tr>
-    <th rowspan="2"><img src= "../Coding/Images/Vehemoth.jpg" alt= "Vehemoth Phosbat"><h2>Vehemoth Phosbat</h2></th></tr>
+    <th rowspan="2"><img src= "/Coding/Images/Vehemoth.jpg" alt= "Vehemoth Phosbat"><h2>Vehemoth Phosbat</h2></th></tr>
     <th rowspan="1">Tectupervus pteromys (Aerodentia Family)</th>
     <th rowspan="1">The Vehemoth Phosbat can be located in the cold, dark caves of the Distant Tundra.</th>
     <th rowspan="1">The Vehemoth Phosbat is a moth-like salamander creature that has dark hairs on its head and back as well as longer, glowing purple hairs that produce a toxic dust.</th>
@@ -88,7 +88,7 @@
       </tr>
 
       <tr>
-        <th rowspan="2"><img src= "../Coding/Images/Scornet.jpg" alt= "Scornet Maestro"><h2>Scornet Maestro</h2></th></tr>
+        <th rowspan="2"><img src= "/Coding/Images/Scornet.jpg" alt= "Scornet Maestro"><h2>Scornet Maestro</h2></th></tr>
         <th rowspan="1">Spourgitis Advenus (Huntinpeck Family)</th>
         <th rowspan="1">The Scornet Maestro can be found on top of a tree trunk in the Twilight River.</th>
         <th rowspan="1">The Scornet Maestro is a avian insectoid creature that is sort of like a queen bee and commands a swarm of 100 Scornets using its harp-like beak.</th>
@@ -106,7 +106,7 @@
           </tr>
 
           <tr>
-            <th rowspan="2"><img src= "../Coding/Images/Plasm.jpg" alt= "Plasm Wraith"><h2>Plasm Wraith</h2></th></tr>
+            <th rowspan="2"><img src= "/Coding/Images/Plasm.jpg" alt= "Plasm Wraith"><h2>Plasm Wraith</h2></th></tr>
             <th rowspan="1">Unknown (Unknown Family)</th>
             <th rowspan="1">The Plasm Wraith can be found in the Formiddable Oak which is a foreboding tree in the top of the regions.</th>
             <th rowspan="1">The Plasm Wraith is a featurelss mass of protoplasmic material that is shaped human-like with a metallic golden sheen.</th>
@@ -115,7 +115,7 @@
             </tr>
 
             <tr>
-              <th rowspan="2"><img src= "../Coding/Images/BShaggy.jpg" alt= "Shaggy Long Legs"><img src= "../Coding/Images/WShaggy.jpg" alt= "Artic Shaggy Long Legs"><img src= "../Coding/Images/BaldyShaggy.jpg" alt= "Baldy Long Legs"><h2>Shaggy Long Legs</h2></th></tr>
+              <th rowspan="2"><img src= "/Coding/Images/BShaggy.jpg" alt= "Shaggy Long Legs"><img src= "/Coding/Images/WShaggy.jpg" alt= "Artic Shaggy Long Legs"><img src= "/Coding/Images/BaldyShaggy.jpg" alt= "Baldy Long Legs"><h2>Shaggy Long Legs</h2></th></tr>
               <th rowspan="1">Pseudoarachnia Capilium (Arachnorb Family)</th>
               <th rowspan="1">This mini boss can be found within the Tropical Wild and the Distant Tundra.</th>
               <th rowspan="1">The Shaggy Long Legs has masses of puffballs along it's joints and a long drapey mass of hair covering its head. It's appearence changes depending on its environment. The black and white variants appear in the Distant Tundra and the black variant in the Tropical Wilds. However, there is some debate if the Baldy Long Legs is a different creature entirely because the coloration of the joints and its hairless appearence, however they have a similar appearence to Shaggy Long Legs after they've lost hair.</th>
@@ -124,7 +124,7 @@
               </tr>
 
               <tr>
-                <th rowspan="2"><img src= "../Coding/Images/Snagret.jpg" alt= "Burrowing Snagret"><h2>Burrowing Snagret</h2></th></tr>
+                <th rowspan="2"><img src= "/Coding/Images/Snagret.jpg" alt= "Burrowing Snagret"><h2>Burrowing Snagret</h2></th></tr>
                 <th rowspan="1">Shiropedes Anacondii (Snavian Family)</th>
                 <th rowspan="1">The Burrowing Snagret appears in the Twilight River.</th>
                 <th rowspan="1">The Burrowing Snagret has a long blue scaly body that lead up to a puff of white feathers with a small head and a long yellow beak. The rest of its body is hidden under ground.</th>
